--- a/fazit.tex
+++ b/fazit.tex
@@ -9,11 +9,11 @@ im Moment nicht durchführbar. Diesbezüglich sind noch einige konzeptionelle
 
 Aufgrund des Entwicklungsstands der verfügbaren SYCL"=Implementierungen ist eine
 Ausführung von Alpaka"=Programmen auf den meisten Hardware"=Plattformen derzeit
-nicht möglich. Lediglich Intel"=CPUs und "=GPUs sind zur Zeit nutzbar, sofern
+nicht möglich. Lediglich Intel"=CPUs und "=GPUs sind gegenwärtig nutzbar, sofern
 man die Beschränkungen des Backend"=Prototypen in Kauf zu nehmen bereit ist.
 
 Gegenüber Alpaka bietet SYCL das modernere, intuitivere und standardnähere
-Programmier"=Interface. Das fragmentierte Ökosystem sowie der eingeschränkte
+Programmier"=Interface. SYCLs fragmentiertes Ökosystem sowie der eingeschränkte
 Hardware"=Support sprechen im Moment noch recht deutlich gegen die Nutzung
 dieses insgesamt vielversprechenden Ansatzes zur parallelen Programmierung. Es
 bleibt deswegen abzuwarten, ob SYCL in den nächsten Monaten und Jahren weitere
