--- a/glossar.tex
+++ b/glossar.tex
@@ -15,7 +15,7 @@
 \newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on graphics
                                   processing units}}
 \newacronym{gpu}{GPU}{\textit{graphics processing unit}}
-\newacronym{hls}{HLS}{\textit{High-Level-Synthese}}
+\newacronym{hls}{HLS}{High-Level-Synthese}
 \newacronym{hpc}{HPC}{\textit{high-performance computing}}
 \newacronym{ic}{IC}{\textit{integrated circuit}}
 \newacronym{ii}{II}{\textit{initiation interval}}
